--- a/.gitmodules
+++ b/.gitmodules
@@ -38,4 +38,5 @@
 	url = https://github.com/NOAA-GFDL/land_null.git
 [submodule "src/atmos_phys"]
 	path = src/atmos_phys
-	url = https://github.com/ChenggongWang/atmos_phys.git
+	url = git@github.com:ChenggongWang/atmos_phys.git
+	branch = NN_Rad0_driver
