--- a/.gitmodules
+++ b/.gitmodules
@@ -39,7 +39,7 @@
 [submodule "src/atmos_phys"]
 	path = src/atmos_phys
 	url = git@github.com:ChenggongWang/atmos_phys.git
-	branch = NN_Rad0_driver
+	branch = NN_Rad0
 [submodule "AM4_RadNN_run"]
 	path = AM4_RadNN_run
 	url = git@github.com:ChenggongWang/AM4_RadNN_run.git
