--- a/.gitmodules
+++ b/.gitmodules
@@ -10,9 +10,6 @@
 [submodule "src/atmos_cubed_sphere"]
 	path = src/atmos_cubed_sphere
 	url = https://github.com/NOAA-GFDL/GFDL_atmos_cubed_sphere.git
-[submodule "src/atmos_phys"]
-	path = src/atmos_phys
-	url = https://github.com/NOAA-GFDL/atmos_phys.git
 [submodule "src/land_lad2"]
 	path = src/land_lad2
 	url = https://github.com/NOAA-GFDL/lm4.git
@@ -42,3 +39,6 @@
 [submodule "AM4_RadNN_run"]
 	path = AM4_RadNN_run
 	url = git@github.com:ChenggongWang/AM4_RadNN_run.git
+[submodule "src/atmos_phys"]
+	path = src/atmos_phys
+	url = git@github.com:ChenggongWang/atmos_phys.git
